--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,3 +6,88 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: 'Sofia';
+    src: url('~assets/fonts/sofia/woff2/SofiaPro-Bold.woff2') format('woff2'),
+    url('~assets/fonts/sofia/woff/SofiaPro-Bold.woff') format('woff');
+    font-weight: 700;
+    font-style: normal;
+    font-stretch: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Sofia';
+    src: url('~assets/fonts/sofia/woff2/SofiaPro-BoldItalic.woff2') format('woff2'),
+    url('~assets/fonts/sofia/woff/SofiaPro-BoldItalic.woff') format('woff');
+    font-weight: 700;
+    font-style: italic;
+    font-stretch: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Sofia';
+    src: url('~assets/fonts/sofia/woff2/SofiaPro-SemiBold.woff2') format('woff2'),
+    url('~assets/fonts/sofia/woff/SofiaPro-SemiBold.woff') format('woff');
+    font-weight: 600;
+    font-style: normal;
+    font-stretch: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Sofia';
+    src: url('~assets/fonts/sofia/woff2/SofiaPro-SemiBoldItalic.woff2')
+    format('woff2'),
+    url('~assets/fonts/sofia/woff/SofiaPro-SemiBoldItalic.woff') format('woff');
+    font-weight: 600;
+    font-style: italic;
+    font-stretch: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Sofia';
+    src: url('~assets/fonts/sofia/woff2/SofiaPro-Medium.woff2') format('woff2'),
+    url('~assets/fonts/sofia/woff/SofiaPro-Medium.woff') format('woff');
+    font-weight: 500;
+    font-style: normal;
+    font-stretch: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Sofia';
+    src: url('~assets/fonts/sofia/woff2/SofiaPro-MediumItalic.woff2') format('woff2'),
+    url('~assets/fonts/sofia/woff/SofiaPro-MediumItalic.woff') format('woff');
+    font-weight: 500;
+    font-style: italic;
+    font-stretch: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Sofia';
+    src: url('~assets/fonts/sofia/woff2/SofiaPro.woff2') format('woff2'),
+    url('~assets/fonts/sofia/woff/SofiaPro.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+    font-stretch: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Sofia';
+    src: url('~assets/fonts/sofia/woff2/SofiaPro-Italic.woff2') format('woff2'),
+    url('~assets/fonts/sofia/woff/SofiaPro-Italic.woff') format('woff');
+    font-weight: 400;
+    font-style: italic;
+    font-stretch: normal;
+    font-display: swap;
+}
+
+html {
+    @apply font-sofia !important;
+}
